--- a/JavaScript/bulb.html
+++ b/JavaScript/bulb.html
@@ -6,7 +6,7 @@
 function light(sw) {
     var pic;
     if (sw == 0) {
-        pic = "Images/pic_bulboff.gif"
+        pic = "Web-Development/Images/pic_bulboff.gif"
     } else {
         pic = "Images/pic_bulbon.gif"
     }
