--- a/JavaScript/bulb.html
+++ b/JavaScript/bulb.html
@@ -14,7 +14,7 @@ function light(sw) {
 }
 </script>
 
-<img id="myImage" src="Images/pic_bulboff.gif" width="100" height="180">
+<img id="myImage" src="/Web-Development/Images/pic_bulboff.gif" width="100" height="180">
 
 <p>
 <button type="button" onclick="light(1)">Light On</button>
