--- a/img.html
+++ b/img.html
@@ -9,7 +9,7 @@
 <body>
 <a href="https://www.google.co.in/" target="_blank">GOOGLE</a> 
 <h3 align="left"><b> Ayesha </b></h3>
-<img src="Images/pic_bulbon.png" height="75px" width="75px" border="2px" alt="Ayesha"/>
+<img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Images/pic_bulboff.gif" height="75px" width="75px" border="2px" alt="Ayesha"/>
 <h4>Full Name: <b> Ayesha Begum</b></br>DOB: <b> 22.03.1993</b> </h4>
 <ol>
 <li> one</li>
