--- a/JavaScript/bulb.html
+++ b/JavaScript/bulb.html
@@ -6,9 +6,9 @@
 function light(sw) {
     var pic;
     if (sw == 0) {
-        pic = "Images/pic_bulboff.gif"
+        pic = "https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/pic_bulboff.gif"
     } else {
-        pic = "Images/pic_bulbon.gif"
+        pic = "https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/pic_bulbon.gif"
     }
     document.getElementById('myImage').src = pic;
 }
