--- a/JavaScript/sports.html
+++ b/JavaScript/sports.html
@@ -14,13 +14,13 @@
 <p>Select your favourite ball to know more about that</p>
 
 <a href="https://en.wikipedia.org/wiki/Cricket">
-  <img src="Images/cricketball.jpg" alt="CRICKET" style="width:50px;height:50px;border:0;float:left;">
+  <img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/cricketball.jpg" alt="CRICKET" style="width:50px;height:50px;border:0;float:left;">
 </a>
 
 <a href="https://en.wikipedia.org/wiki/Football">
-  <img src="Images/football.jpg" alt="FOOTBALL" style="width:50px;height:50px;border:0;float:center;">
+  <img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/football.jpg" alt="FOOTBALL" style="width:50px;height:50px;border:0;float:center;">
 </a>
 
 <a href="https://en.wikipedia.org/wiki/Golf">
-  <img src="Images/golfball.jpg" alt="GOLF" style="width:50px;height:50px;border:0;float:right;">
+  <img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/golfball.jpg" alt="GOLF" style="width:50px;height:50px;border:0;float:right;">
 </a>
