--- a/JavaScript/sports.html
+++ b/JavaScript/sports.html
@@ -3,6 +3,7 @@
 
 <head>
 <title>Sunaina's SPORTS academy</title>
+<link rel="stylesheet" href="style01.css">
 </head>
 
 <body>
@@ -14,13 +15,13 @@
 <p>Select your favourite ball to know more about that</p>
 
 <a href="https://en.wikipedia.org/wiki/Cricket">
-  <img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/cricketball.jpg" alt="CRICKET" style="width:50px;height:50px;border:0;">
+  <img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/cricketball.jpg" alt="CRICKET" style="width:200px;height:200px;border:0;">
 </a>
 
 <a href="https://en.wikipedia.org/wiki/Football">
-  <img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/football.jpg" alt="FOOTBALL" style="width:50px;height:50px;border:0;">
+  <img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/football.jpg" alt="FOOTBALL" style="width:200px;height:200px;border:0;">
 </a>
 
 <a href="https://en.wikipedia.org/wiki/Golf">
-  <img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/golfball.jpg" alt="GOLF" style="width:50px;height:50px;border:0;">
+  <img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/Images/golfball.jpg" alt="GOLF" style="width:200px;height:200px;border:0;">
 </a>
