--- a/JavaScript/sports.html
+++ b/JavaScript/sports.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Sunaina's SPORTS academy</title>
-<link rel="stylesheet" href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/JavaScript/style01.css">
+<link rel="stylesheet" href="https://cdn.rawgit.com/Ayesha-Begum/Web-Development/master/JavaScript/style01.css">
 </head>
 
 <body>
