--- a/JavaScript/sports.html
+++ b/JavaScript/sports.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Sunaina's SPORTS academy</title>
-<link rel="stylesheet" href="/JavaScrpit/style01.css">
+<link rel="stylesheet" href="/Web-Development/JavaScrpit/style01.css">
 </head>
 
 <body>
