--- a/Ghousia/The scribbling me.html
+++ b/Ghousia/The scribbling me.html
@@ -39,4 +39,14 @@ And my article with title Father's princess got selected and was published in TO
 
 <p>Find below some of my scribblings. Hope you like it :)</p>
 
+<h3>My Scribblings</h3>
+
+<ul>
+  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story1.html">RAIN CLEARED MY PAIN</a></li>
+  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story2.html">DAMN CUTE AASMA</a></li>
+  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story3.html">FATHERS' PRINCESS</a></li>
+  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story4.html">GOAL</a></li>
+  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story5.html">MOTHER'S ETERNAL LOVE</a></li>
+</ul> 
+
 </body>
