--- a/Ghousia/story3.html
+++ b/Ghousia/story3.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-<title>FATHERS' PRINCESS</title>
+<title>FATHER'S PRINCESS</title>
 </head>
 
 <body>
-<h1>FATHERS' PRINCESS</h1>
+<h1>FATHER'S PRINCESS</h1>
 <p>Rain rain go away</br>
 
 Come again another day</br>
