Update The scribbling me.html

--- a/Ghousia/The scribbling me.html
+++ b/Ghousia/The scribbling me.html
@@ -10,22 +10,25 @@
 
 <h1>THE SCRIBBLING ME</h1>
 
+<div class="about">
 <h3>About Me</h3>
-
 <p>I am Ghousia Begum. 
 Born in early 90's. 
 A Pharmacy graduate. 
 From The City of Destiny - Visakhapatnam.
 Living in Sharjah with my life parter.  
 I love to write any thing to every thing. 
-I am a book worm too.</p>
+I am a book worm too.</br></br>
+<img src="Images/writer.jpg" alt="writer" height="100" width="240"></p>
+</div>
 
+<div class="started">
 <h3>It all started:</h3>
-
 <p>When I was in class 8
  inspired by my sister
  who gave me motivation to 
 write by doing all the crazy stuff and irritating me always.</p>
+
 
 <p>At the age of 23 my first e-book 'I thought you were mine' was published
 It gave me lot of strength and positiveness in proceeding further. 
@@ -39,15 +42,17 @@ Participated in a contest named Raindrops on paper conducted by writersmelon blo
 And my article with title Father's princess got selected and was published in TOI.<p>
 
 <p>Find below some of my scribblings. Hope you like it :)</p>
+</div>
 
+<div class="stories">
 <h3>My Scribblings</h3>
-
 <ul>
   <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story1.html">RAIN CLEARED MY PAIN</a></li>
   <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story2.html">DAMN CUTE AASMA</a></li>
   <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story3.html">FATHER'S PRINCESS</a></li>
   <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story4.html">GOAL</a></li>
   <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story5.html">MOTHER'S ETERNAL LOVE</a></li>
-</ul> 
+</ul>
+</div>
 
 </body>
