--- a/Ghousia/The scribbling me.html
+++ b/Ghousia/The scribbling me.html
@@ -47,10 +47,10 @@ And my article with title Father's princess got selected and was published in TO
 <div class="stories">
 <h3>My Scribblings:</h3>
 <ul>
-  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story1.html"><img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/Images/Rain%20cleared%20my%20pain.jpg" alt="story1" height="150" width="200"><p>RAIN CLEARED MY PAIN</p></a></li>
-  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story2.html"><img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/Images/Damn%20cute.jpg" alt="story2" height="150" width="200"><p>DAMN CUTE AASMA</p></a></li>
-  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story3.html"><img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/Images/fathers%20princess.jpg" alt="story3" height="150" width="200"><p>FATHER'S PRINCESS</p></a></li>
-  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story5.html"><img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/Images/mothers%20love.jpg" alt="story5" height="150" width="200"><p>MOTHER'S ETERNAL LOVE</p></a></li>
+  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story1.html"><img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/Images/Rain%20cleared%20my%20pain.jpg" alt="story1" height="150" width="200">RAIN CLEARED MY PAIN</a></li>
+  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story2.html"><img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/Images/Damn%20cute.jpg" alt="story2" height="150" width="200">DAMN CUTE AASMA</a></li>
+  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story3.html"><img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/Images/fathers%20princess.jpg" alt="story3" height="150" width="200">FATHER'S PRINCESS</a></li>
+  <li><a href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/story5.html"><img src="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/Images/mothers%20love.jpg" alt="story5" height="150" width="200">MOTHER'S ETERNAL LOVE</a></li>
 </ul>
 </div>
 
