--- a/Ghousia/story1.html
+++ b/Ghousia/story1.html
@@ -3,6 +3,7 @@
 
 <head>
 <title>RAIN CLEARED MY PAIN</title>
+<link rel="stylesheet" href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/de_style.css">
 </head>
 
 <body>
