--- a/Ghousia/story2.html
+++ b/Ghousia/story2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>DAMN CUTE AASMA</title>
+<link rel="stylesheet" href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/de_style.css">
 </head>
 
 <body>
