Update The scribbling me.html

--- a/Ghousia/The scribbling me.html
+++ b/Ghousia/The scribbling me.html
@@ -1,6 +1,6 @@
 
 <html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <title>The Scribbling Me</title>
 <link rel="stylesheet" href="https://raw.githubusercontent.com/Ayesha-Begum/Web-Development/master/Ghousia/stylesheet1.css">
